src/main/java/cc/sferalabs/sfera/scripts/parser/antlr/SferaScriptGrammarParser.java
// Generated from SferaScriptGrammar.g4 by ANTLR 4.5.1
package cc.sferalabs.sfera.scripts.parser.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class SferaScriptGrammarParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7,
			T__7 = 8, ImportLine = 9, Script = 10, BooleanLiteral = 11, Unknown = 12, NodeId = 13,
			NumberLiteral = 14, StringLiteral = 15, ET = 16, NE = 17, GT = 18, LT = 19, GE = 20,
			LE = 21, OR = 22, AND = 23, NOT = 24, WS = 25, COMMENT = 26, LINE_COMMENT = 27;
	public static final int RULE_parse = 0, RULE_imports = 1, RULE_importLine = 2, RULE_init = 3,
			RULE_rules = 4, RULE_ruleLine = 5, RULE_action = 6, RULE_trigger = 7,
			RULE_orExpression = 8, RULE_andExpression = 9, RULE_notExpression = 10,
			RULE_atomExpression = 11, RULE_event = 12, RULE_stableEvent = 13,
			RULE_stringComparison = 14, RULE_numberComparison = 15, RULE_booleanComparison = 16,
			RULE_unknownComparison = 17, RULE_transientEvent = 18, RULE_terminalNode = 19,
			RULE_subNode = 20, RULE_parameters = 21, RULE_paramsList = 22, RULE_parameter = 23,
			RULE_array = 24;
	public static final String[] ruleNames = { "parse", "imports", "importLine", "init", "rules",
			"ruleLine", "action", "trigger", "orExpression", "andExpression", "notExpression",
			"atomExpression", "event", "stableEvent", "stringComparison", "numberComparison",
			"booleanComparison", "unknownComparison", "transientEvent", "terminalNode", "subNode",
			"parameters", "paramsList", "parameter", "array" };

	private static final String[] _LITERAL_NAMES = { null, "'init'", "':'", "'('", "')'", "'.'",
			"','", "'['", "']'", null, null, null, "'unknown'", null, null, null, "'=='", "'!='",
			"'>'", "'<'", "'>='", "'<='", "'||'", "'&&'", "'!'" };
	private static final String[] _SYMBOLIC_NAMES = { null, null, null, null, null, null, null,
			null, null, "ImportLine", "Script", "BooleanLiteral", "Unknown", "NodeId",
			"NumberLiteral", "StringLiteral", "ET", "NE", "GT", "LT", "GE", "LE", "OR", "AND",
			"NOT", "WS", "COMMENT", "LINE_COMMENT" };
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "SferaScriptGrammar.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public SferaScriptGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() {
			return getToken(SferaScriptGrammarParser.EOF, 0);
		}

		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class, 0);
		}

		public InitContext init() {
			return getRuleContext(InitContext.class, 0);
		}

		public RulesContext rules() {
			return getRuleContext(RulesContext.class, 0);
		}

		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_parse;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterParse(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(51);
				_la = _input.LA(1);
				if (_la == ImportLine) {
					{
						setState(50);
						imports();
					}
				}

				setState(54);
				_la = _input.LA(1);
				if (_la == T__0 || _la == Script) {
					{
						setState(53);
						init();
					}
				}

				setState(57);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0
						&& ((1L << _la) & ((1L << T__2) | (1L << NodeId) | (1L << NOT))) != 0)) {
					{
						setState(56);
						rules();
					}
				}

				setState(59);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsContext extends ParserRuleContext {
		public List<ImportLineContext> importLine() {
			return getRuleContexts(ImportLineContext.class);
		}

		public ImportLineContext importLine(int i) {
			return getRuleContext(ImportLineContext.class, i);
		}

		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_imports;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterImports(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitImports(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(61);
							importLine();
						}
					}
					setState(64);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while (_la == ImportLine);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportLineContext extends ParserRuleContext {
		public TerminalNode ImportLine() {
			return getToken(SferaScriptGrammarParser.ImportLine, 0);
		}

		public ImportLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_importLine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterImportLine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitImportLine(this);
		}
	}

	public final ImportLineContext importLine() throws RecognitionException {
		ImportLineContext _localctx = new ImportLineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(66);
				match(ImportLine);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitContext extends ParserRuleContext {
		public TerminalNode Script() {
			return getToken(SferaScriptGrammarParser.Script, 0);
		}

		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_init;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterInit(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(69);
				_la = _input.LA(1);
				if (_la == T__0) {
					{
						setState(68);
						match(T__0);
					}
				}

				setState(71);
				match(Script);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesContext extends ParserRuleContext {
		public List<RuleLineContext> ruleLine() {
			return getRuleContexts(RuleLineContext.class);
		}

		public RuleLineContext ruleLine(int i) {
			return getRuleContext(RuleLineContext.class, i);
		}

		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_rules;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterRules(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitRules(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(73);
							ruleLine();
						}
					}
					setState(76);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ((((_la) & ~0x3f) == 0
						&& ((1L << _la) & ((1L << T__2) | (1L << NodeId) | (1L << NOT))) != 0));
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleLineContext extends ParserRuleContext {
		public TriggerContext trigger() {
			return getRuleContext(TriggerContext.class, 0);
		}

		public ActionContext action() {
			return getRuleContext(ActionContext.class, 0);
		}

		public RuleLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_ruleLine;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterRuleLine(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitRuleLine(this);
		}
	}

	public final RuleLineContext ruleLine() throws RecognitionException {
		RuleLineContext _localctx = new RuleLineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ruleLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(78);
				trigger();
				setState(79);
				match(T__1);
				setState(80);
				action();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public TerminalNode Script() {
			return getToken(SferaScriptGrammarParser.Script, 0);
		}

		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_action;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterAction(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_action);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(82);
				match(Script);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TriggerContext extends ParserRuleContext {
		public OrExpressionContext orExpression() {
			return getRuleContext(OrExpressionContext.class, 0);
		}

		public TriggerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_trigger;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterTrigger(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitTrigger(this);
		}
	}

	public final TriggerContext trigger() throws RecognitionException {
		TriggerContext _localctx = new TriggerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_trigger);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(84);
				orExpression();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrExpressionContext extends ParserRuleContext {
		public List<AndExpressionContext> andExpression() {
			return getRuleContexts(AndExpressionContext.class);
		}

		public AndExpressionContext andExpression(int i) {
			return getRuleContext(AndExpressionContext.class, i);
		}

		public List<TerminalNode> OR() {
			return getTokens(SferaScriptGrammarParser.OR);
		}

		public TerminalNode OR(int i) {
			return getToken(SferaScriptGrammarParser.OR, i);
		}

		public OrExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_orExpression;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterOrExpression(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitOrExpression(this);
		}
	}

	public final OrExpressionContext orExpression() throws RecognitionException {
		OrExpressionContext _localctx = new OrExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_orExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(86);
				andExpression();
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == OR) {
					{
						{
							setState(87);
							match(OR);
							setState(88);
							andExpression();
						}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndExpressionContext extends ParserRuleContext {
		public List<NotExpressionContext> notExpression() {
			return getRuleContexts(NotExpressionContext.class);
		}

		public NotExpressionContext notExpression(int i) {
			return getRuleContext(NotExpressionContext.class, i);
		}

		public List<TerminalNode> AND() {
			return getTokens(SferaScriptGrammarParser.AND);
		}

		public TerminalNode AND(int i) {
			return getToken(SferaScriptGrammarParser.AND, i);
		}

		public AndExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_andExpression;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterAndExpression(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitAndExpression(this);
		}
	}

	public final AndExpressionContext andExpression() throws RecognitionException {
		AndExpressionContext _localctx = new AndExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_andExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(94);
				notExpression();
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == AND) {
					{
						{
							setState(95);
							match(AND);
							setState(96);
							notExpression();
						}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotExpressionContext extends ParserRuleContext {
		public TerminalNode NOT() {
			return getToken(SferaScriptGrammarParser.NOT, 0);
		}

		public AtomExpressionContext atomExpression() {
			return getRuleContext(AtomExpressionContext.class, 0);
		}

		public NotExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_notExpression;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterNotExpression(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitNotExpression(this);
		}
	}

	public final NotExpressionContext notExpression() throws RecognitionException {
		NotExpressionContext _localctx = new NotExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_notExpression);
		try {
			setState(105);
			switch (_input.LA(1)) {
			case NOT:
				enterOuterAlt(_localctx, 1); {
				setState(102);
				match(NOT);
				setState(103);
				atomExpression();
			}
				break;
			case T__2:
			case NodeId:
				enterOuterAlt(_localctx, 2); {
				setState(104);
				atomExpression();
			}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomExpressionContext extends ParserRuleContext {
		public EventContext event() {
			return getRuleContext(EventContext.class, 0);
		}

		public OrExpressionContext orExpression() {
			return getRuleContext(OrExpressionContext.class, 0);
		}

		public AtomExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_atomExpression;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterAtomExpression(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitAtomExpression(this);
		}
	}

	public final AtomExpressionContext atomExpression() throws RecognitionException {
		AtomExpressionContext _localctx = new AtomExpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_atomExpression);
		try {
			setState(112);
			switch (_input.LA(1)) {
			case NodeId:
				enterOuterAlt(_localctx, 1); {
				setState(107);
				event();
			}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2); {
				setState(108);
				match(T__2);
				setState(109);
				orExpression();
				setState(110);
				match(T__3);
			}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventContext extends ParserRuleContext {
		public StableEventContext stableEvent() {
			return getRuleContext(StableEventContext.class, 0);
		}

		public TransientEventContext transientEvent() {
			return getRuleContext(TransientEventContext.class, 0);
		}

		public EventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_event;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterEvent(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitEvent(this);
		}
	}

	public final EventContext event() throws RecognitionException {
		EventContext _localctx = new EventContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_event);
		try {
			setState(116);
			switch (getInterpreter().adaptivePredict(_input, 10, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1); {
				setState(114);
				stableEvent();
			}
				break;
			case 2:
				enterOuterAlt(_localctx, 2); {
				setState(115);
				transientEvent();
			}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StableEventContext extends ParserRuleContext {
		public StringComparisonContext stringComparison() {
			return getRuleContext(StringComparisonContext.class, 0);
		}

		public NumberComparisonContext numberComparison() {
			return getRuleContext(NumberComparisonContext.class, 0);
		}

		public BooleanComparisonContext booleanComparison() {
			return getRuleContext(BooleanComparisonContext.class, 0);
		}

		public UnknownComparisonContext unknownComparison() {
			return getRuleContext(UnknownComparisonContext.class, 0);
		}

		public StableEventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_stableEvent;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterStableEvent(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitStableEvent(this);
		}
	}

	public final StableEventContext stableEvent() throws RecognitionException {
		StableEventContext _localctx = new StableEventContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_stableEvent);
		try {
			setState(122);
			switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1); {
				setState(118);
				stringComparison();
			}
				break;
			case 2:
				enterOuterAlt(_localctx, 2); {
				setState(119);
				numberComparison();
			}
				break;
			case 3:
				enterOuterAlt(_localctx, 3); {
				setState(120);
				booleanComparison();
			}
				break;
			case 4:
				enterOuterAlt(_localctx, 4); {
				setState(121);
				unknownComparison();
			}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringComparisonContext extends ParserRuleContext {
		public TerminalNodeContext terminalNode() {
			return getRuleContext(TerminalNodeContext.class, 0);
		}

		public TerminalNode StringLiteral() {
			return getToken(SferaScriptGrammarParser.StringLiteral, 0);
		}

		public TerminalNode ET() {
			return getToken(SferaScriptGrammarParser.ET, 0);
		}

		public TerminalNode NE() {
			return getToken(SferaScriptGrammarParser.NE, 0);
		}

		public TerminalNode GT() {
			return getToken(SferaScriptGrammarParser.GT, 0);
		}

		public TerminalNode LT() {
			return getToken(SferaScriptGrammarParser.LT, 0);
		}

		public TerminalNode GE() {
			return getToken(SferaScriptGrammarParser.GE, 0);
		}

		public TerminalNode LE() {
			return getToken(SferaScriptGrammarParser.LE, 0);
		}

		public StringComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_stringComparison;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterStringComparison(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitStringComparison(this);
		}
	}

	public final StringComparisonContext stringComparison() throws RecognitionException {
		StringComparisonContext _localctx = new StringComparisonContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_stringComparison);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(124);
				terminalNode();
				setState(125);
				_la = _input.LA(1);
				if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ET) | (1L << NE) | (1L << GT)
						| (1L << LT) | (1L << GE) | (1L << LE))) != 0))) {
					_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(126);
				match(StringLiteral);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberComparisonContext extends ParserRuleContext {
		public TerminalNodeContext terminalNode() {
			return getRuleContext(TerminalNodeContext.class, 0);
		}

		public TerminalNode NumberLiteral() {
			return getToken(SferaScriptGrammarParser.NumberLiteral, 0);
		}

		public TerminalNode ET() {
			return getToken(SferaScriptGrammarParser.ET, 0);
		}

		public TerminalNode NE() {
			return getToken(SferaScriptGrammarParser.NE, 0);
		}

		public TerminalNode GT() {
			return getToken(SferaScriptGrammarParser.GT, 0);
		}

		public TerminalNode LT() {
			return getToken(SferaScriptGrammarParser.LT, 0);
		}

		public TerminalNode GE() {
			return getToken(SferaScriptGrammarParser.GE, 0);
		}

		public TerminalNode LE() {
			return getToken(SferaScriptGrammarParser.LE, 0);
		}

		public NumberComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_numberComparison;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).enterNumberComparison(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof SferaScriptGrammarListener)
				((SferaScriptGrammarListener) listener).exitNumberComparison(this);
		}
	}
